--- a/P06/html/gene.html
+++ b/P06/html/gene.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>GET</title>
+        <title>GENE</title>
     </head>
     <body>
-        <h1>Sequence number {{context.n}}</h1>
-        <p>{{context.seq}}</p>
+        <h1>Gene: {{context.name}}</h1>
+        <p>{{context.gene}}</p>
         <a href="/">Main page</a>
     </body>
 </html>
