--- a/P06/html/gene.html
+++ b/P06/html/gene.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Gene: {{context.name}}</h1>
-        <p>{{context.gene}}</p>
+        <textarea rows="50" cols="50">{{context.gene}}</textarea><br>
         <a href="/">Main page</a>
     </body>
 </html>
